Added links to C# files inside Android project
Android library will use SmallDec_UseLegacyStorage
for now(so can test both old and new functionality depending on storage needs etc)

--- a/BlazesAndroidCSharpGlobalCode/BlazesAndroidCSharpGlobalCode.csproj
+++ b/BlazesAndroidCSharpGlobalCode/BlazesAndroidCSharpGlobalCode.csproj
@@ -83,9 +83,37 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
-<!--     <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDecV2.cs">
-      <Link>GlobalCode_ExperimentalCode\%(FileName)</Link>
-    </Compile> -->
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\CustomDictionary.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\CustomListSet.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\PrivateFieldAccessor.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDecCollection.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDec_IEquatable.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDec_MathBasedFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDec_StandardConversions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SmallDec_TypeDescriptors.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDecGlobalCode.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_Int16_4Decimal.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_SmallDec_OperatorFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_SmallDec_OtherConversions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_SmallDec_Rounding.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_SmallDec_TrigometricFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\ValidationOverride.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\VariableData.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_IniData\IniData.cs"><Link>GlobalCode_IniData\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_StringFunctions\StringFunctions.cs"><Link>GlobalCode_StringFunctions\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_VariableConversionFunctions\TypeDataInfo.cs"><Link>GlobalCode_VariableConversionFunctions\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.cs"><Link>GlobalCode_VariableConversionFunctions\%(FileName)</Link></Compile>
+  </ItemGroup>
+  <ItemGroup Label="Larger SuperDec Values">
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\CustomDec.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_ExtraDec64_19Decimal.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_Int16_4Decimal.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_Int32_9Decimal.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_LargeDec_OperatorFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_MediumDec_AlternativeOperatorFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_MediumDec_OperatorFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+    <Compile Include="$(CSharpSource)\GlobalCode_ExperimentalCode\SuperDec_ModerateDec_OperatorFunctions.cs"><Link>GlobalCode_ExperimentalCode\%(FileName)</Link></Compile>
+  </ItemGroup>
   <ItemGroup>
     <Folder Include="GlobalCode_ExperimentalCode\" />
     <Folder Include="GlobalCode_IniData\" />
