--- a/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
+++ b/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
@@ -102,16 +102,28 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalCode_ExperimentalCode\CustomDec.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\CustomDictionary.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\CustomListSet.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\PrivateFieldAccessor.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDecCollection.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SmallDec_IEquatable.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SmallDec_MathBasedFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SmallDec_StandardConversions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SmallDec_TypeDescriptors.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDecGlobalCode.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_ExtraDec64_19Decimal.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_Int16_4Decimal.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_Int32_9Decimal.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_LargeDec_OperatorFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_AlternativeOperatorFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_OperatorFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_ModerateDec_OperatorFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OperatorFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OtherConversions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_Rounding.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_TrigometricFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\ValidationOverride.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\VariableData.cs" />
     <Compile Include="GlobalCode_IniData\IniData.cs" />
     <Compile Include="GlobalCode_StringFunctions\StringFunctions.cs" />
