--- a/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
+++ b/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
@@ -25,7 +25,7 @@
     <ProjectGuid>{25767689-5C49-4AA6-952A-262BE9C2D682}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BlazesCSharpGlobalCode</RootNamespace>
+    <RootNamespace>CSharpGlobalCode</RootNamespace>
     <AssemblyName>BlazesCSharpGlobalCode</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -122,15 +122,16 @@
     <Compile Include="GlobalCode_ExperimentalCode\SmallDec.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\MediumDec.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_LargeDec_OperatorFunctions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_OperatorFunctions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_OtherConversions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_Rounding.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_MediumDec_TrigometricFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\MediumDec_OperatorFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\MediumDec_OtherConversions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\MediumDec_Rounding.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\MediumDec_TrigometricFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_ModerateDec_OperatorFunctions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OperatorFunctions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OtherConversions.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_Rounding.cs" />
-    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_TrigometricFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_OperatorFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_OtherConversions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_Rounding.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_TrigometricFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDec_OperatorFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\ValidationOverride.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\VariableData.cs" />
     <Compile Include="GlobalCode_IniData\IniData.cs" />
